# MyEngine

./: .gitignore  CMakeLists.txt  MyEngine.sln  README.md
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: Engine.h  pch.h
Engine/src/Engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCode.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButton.h  Time.cpp  Time.h  Window.h
Engine/src/Engine/Audio/: AudioPlayer.cpp  AudioPlayer.h
Engine/src/Engine/Event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Engine/Math/: math.h
Engine/src/Engine/Render/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsCamera.cpp  GraphicsCamera.h  GraphicsContext.h  Render.cpp  Render.h  Render2D.cpp  Render2D.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Engine/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneManager.cpp  SceneManager.h  SceneSerialization.cpp  SceneSerialization.h  ScriptEngine.cpp  ScriptEngine.h  ScriptableEntity.cpp  ScriptableEntity.h
Engine/src/Engine/Utils/: PlatformUtils.h
Engine/src/Platform/DirectX12/: DirectX12Context.cpp  DirectX12Context.h
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenglContext.cpp  OpenglContext.h
Engine/src/Platform/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanInstance.cpp  VulkanInstance.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
GLFW/: CMakeLists.txt  GLFW.vcxproj  GLFW.vcxproj.filters
Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  imgui.ini
Game/assets/C#/: Class1.cs
Game/assets/Scene/: C#.scene  Music.scene  Physics2D.scene  RGB.scene  Text.scene  Texture.scene  White.scene
Game/assets/Scene/Test/: C#.scene
Game/assets/Shader/: Render2D_Circle.glsl  Render2D_Line.glsl  Render2D_Quad.glsl  Text.glsl
Game/head/: Layer2D.h  RunGame.h
Game/src/: Layer2D.cpp  RunGame.cpp  test.cpp
Game/src/Panels/: ContentBrowserPanels.cpp  ContentBrowserPanels.h  ScenePanels.cpp  ScenePanels.h
ImGui/: CMakeLists.txt  ImGui.vcxproj  ImGui.vcxproj.filters
ImGui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
ScriptEngine/: CMakeLists.txt  Component.cs  Entity.cs  Input.cs  InternalCalls.cs  KeyCode.cs  MonoBehavior.cs  SceneManager.cs  ScriptEngine.csproj  Vector2.cs  Vector3.cs
Third/include/spdlog/fmt/bundled/: format.h
Third/lib/: freetyped.lib
box2d/: CMakeLists.txt  box2d.vcxproj  box2d.vcxproj.filters
box2d/include/box2d/: b2_settings.h
glad/: CMakeLists.txt  glad.c  glad.vcxproj  glad.vcxproj.filters
glad/glad/: glad.h
glm/: CMakeLists.txt  glm.vcxproj  glm.vcxproj.filters
miniaudio/: CMakeLists.txt  miniaudio.c  miniaudio.vcxproj  miniaudio.vcxproj.filters
stb_image/: CMakeLists.txt  stb_image.vcxproj
test/: BaseClass.h  DerivedClass.cpp  VulkanInstance.cpp  VulkanInstance.h  compile.bat  shader.frag  shader.vert  vert.spv  源.cpp
yaml/: CMakeLists.txt  yaml.vcxproj  yaml.vcxproj.filters
